hphp/hack/test/typecheck/akshape/dynamic_index_lvalue.php.exp
array<[1]intersect(Tstring), [2]intersect(Tstring, Tint)>
File "dynamic_index_lvalue.php", line 14, characters 15-22:
Invalid argument (Typing[4110])
File "dynamic_index_lvalue.php", line 17, characters 22-27:
This is a string
File "dynamic_index_lvalue.php", line 10, characters 14-14:
It is incompatible with an int
